Sauvegarde de secours

--- a/styles/penombre - Copie.less
+++ b/styles/penombre - Copie.less
@@ -10,6 +10,7 @@
 @color-accent: #917f35; // Doré
 @background-light: #faeed6; // Fond clair
 @background-dark: #2d1000; // fond frise sombre
+@color-blue: #124b63; // Bleu
 
 // Polices
 @font-cattedrale: "CattedraleDemo";
@@ -506,7 +507,7 @@ body {
           width: 254px;
           clear: right;
 
-         .name {
+          .name {
             size: @font-size-large;
             text-align: center;
           }
