--- a/penombre.css
+++ b/penombre.css
@@ -54,6 +54,10 @@ penombre-toggle-switch[checked] thumb {
   font-family: "ChocoCovRainBold";
   src: url(/systems/penombre/fonts/chocolate-covered-raindrops/Chocolate%20Covered%20Raindrops%20BOLD.ttf);
 }
+@font-face {
+  font-family: "NotoMusic";
+  src: url(/systems/penombre/fonts/noto-music/NotoMusic-Regular.ttf);
+}
 /* ---------------------------------------------
         Mixins
 --------------------------------------------- */
@@ -244,6 +248,26 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div span.description {
   height: auto;
 }
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div label.croche {
+  font-size: 55px;
+  font-family: "NotoMusic";
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div label.note1 {
+  margin-left: 20px;
+  margin-top: -62px;
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div label.note2 {
+  margin-left: 60px;
+  margin-top: -84px;
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div label.note3 {
+  margin-left: 100px;
+  margin-top: -83px;
+}
+.penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-1-2 div label.note4 {
+  margin-left: 140px;
+  margin-top: -84px;
+}
 .penombre.eminence .eminence-content .eminence-timbre-2 .datas-timbre .col-2-2 {
   float: left;
   width: 101px;
@@ -379,6 +403,15 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   float: left;
   width: 254px;
   clear: right;
+}
+.penombre.eminence .eminence-content .eminence-personnage .data .name {
+  size: 29px;
+  text-align: center;
+}
+.penombre.eminence .eminence-content .eminence-personnage .data .description {
+  size: 19px;
+  color: #124b63;
+  text-align: center;
 }
 .penombre.eminence .eminence-content .eminence-harmoniques {
   min-height: 350px;
@@ -619,7 +652,7 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   font-size: 30px;
 }
 .penombre.eminence .eminence-content .eminence-pouvoirs {
-  min-height: 255px;
+  min-height: 205px;
   color: #56605b;
   text-align: center;
 }
@@ -750,7 +783,7 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   justify-content: space-between;
 }
 .penombre.eminence .eminence-content .eminence-atouts {
-  min-height: 255px;
+  min-height: 205px;
   color: #56605b;
   text-align: center;
 }
@@ -885,7 +918,7 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   height: 20px;
 }
 .penombre.eminence .eminence-content .eminence-maitrises {
-  min-height: 255px;
+  min-height: 205px;
   color: #56605b;
   text-align: center;
 }
@@ -1006,7 +1039,6 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
 }
 .penombre.eminence .eminence-content .eminence-recapitulatif .content .tableau .div-gauche {
   float: left;
-  height: 100px;
   width: 477px;
 }
 .penombre.eminence .eminence-content .eminence-recapitulatif .content .tableau .div-gauche .img-gauche {
@@ -1014,8 +1046,7 @@ body.theme-dark .penombre.eminence .eminence-timbre-2 .frise-penombre {
   border-bottom-left-radius: 4px;
 }
 .penombre.eminence .eminence-content .eminence-recapitulatif .content .tableau .div-droite {
-  float: left;
-  height: 100px;
+  margin-left: 477px;
   width: 152px;
   padding-left: 33px;
 }
