--- a/styles/penombre.less
+++ b/styles/penombre.less
@@ -512,7 +512,7 @@ body {
 
       // Hauteurs spécifiques
       .eminence-personnage {
-        min-height: 165px;
+        min-height: 250px;
         color: @color-primary;
         .logo-frame {
           display: table;
@@ -549,11 +549,11 @@ body {
           clear: right;
 
          .name {
-            size: @font-size-large;
+            font-size: @font-size-2xlarge;
             text-align: center;
           }
           .description {
-            size : @font-size-middle;
+            font-size : @font-size-large;
             color : @color-blue;
             text-align: center;
           }
@@ -851,20 +851,12 @@ body {
       }
 
       // Section Pouvoirs
-      .eminence-pouvoirs {
+      .eminence-pouvoirs,
+      .eminence-pouvoirs-2 {
         min-height: 205px;
         color: @color-secondary;
         text-align: center;
-      }
 
-      .eminence-pouvoirs-2 {
-        min-height: 400px;
-        color: @color-secondary;
-        text-align: center;
-      }
-
-      .eminence-pouvoirs,
-      .eminence-pouvoirs-2 {
         .titre-section-pouvoirs {
           font-size: @font-size-2xlarge;
           float: none;
@@ -989,7 +981,8 @@ body {
       }
 
       // Section Atouts
-      .eminence-atouts {
+      .eminence-atouts,
+      .eminence-atouts-2 {
         min-height: 205px;
         color: @color-secondary;
         text-align: center;
@@ -997,20 +990,7 @@ body {
         .plusitem {
           text-align: right;
         }
-      }
 
-      .eminence-atouts-2 {
-        min-height: 400px;
-        color: @color-secondary;
-        text-align: center;
-
-        .plusitem {
-          text-align: right;
-        }
-      }
-
-      .eminence-atouts,
-      .eminence-atouts-2 {
         .titre-section-atouts {
           font-size: @font-size-2xlarge;
           float: none;
@@ -1130,20 +1110,12 @@ body {
       }
 
       // Section Maîtrises
-      .eminence-maitrises {
+      .eminence-maitrises,
+      .eminence-maitrises-2 {
         min-height: 205px;
         color: @color-secondary;
         text-align: center;
-      }
 
-      .eminence-maitrises-2 {
-        min-height: 400px;
-        color: @color-secondary;
-        text-align: center;
-      }
-
-      .eminence-maitrises,
-      .eminence-maitrises-2 {
         .titre-section-maitrises {
           font-size: @font-size-2xlarge;
           float: none;
